--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@paypal/paypal-js": "^7.0.3",
+    "axios": "^1.13.2",
+    "crypto-js": "^4.2.0",
     "firebase": "^9.23.0",
     "framer-motion": "^10.12.16",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "nodemailer": "^6.9.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
