Add Robots.txt, sidemap.xml, Google Console, Google Analytic, Add tawk.to, Messenger chat bot, Add SEO, share buttons, Add Export email users, MailChimp, Fixed minor bugs

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,20 @@ VITE_FIREBASE_APP_ID=your_app_id_here
 # Cloudinary Configuration
 VITE_CLOUDINARY_CLOUD_NAME=your_cloud_name_here
 VITE_CLOUDINARY_UPLOAD_PRESET=your_upload_preset_here
+
+# VNPay Configuration
+VITE_VNPAY_TMN_CODE=your_vnpay_tmn_code
+VITE_VNPAY_HASH_SECRET=your_vnpay_hash_secret
+VITE_VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VITE_VNPAY_RETURN_URL=http://localhost:5173/vnpay/return
+
+# SEO & Analytics
+VITE_SITE_URL=http://localhost:5173
+VITE_GA_TRACKING_ID=G-XXXXXXXXXX
+VITE_FB_PAGE_ID=your_facebook_page_id
+
+# Email Marketing
+VITE_MAILCHIMP_API_KEY=your_mailchimp_api_key
+VITE_MAILCHIMP_AUDIENCE_ID=your_audience_id
+VITE_MAILCHIMP_SERVER_PREFIX=us1
+
