--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.9.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
     "react-paypal-button-v2": "^2.6.3",
